<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ohsanghun.androidappwithoutevening.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Intent"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:textAlignment="center" />

            <Button
                android:text="@string/explicit_intent_simple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/explicitIntentSimple"
                android:textSize="14sp"
                android:onClick="onClickExplicitIntent"
                android:textAllCaps="false" />

            <Button
                android:text="@string/explicit_intent_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/explicitIntentRequest"
                android:textSize="14sp"
                android:onClick="onClickExplicitIntent"
                android:textAllCaps="false" />

            <Button
                android:text="@string/explicit_intent_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/explicitIntentResponse"
                android:textSize="14sp"
                android:onClick="onClickExplicitIntent"
                android:textAllCaps="false" />

            <Button
                android:text="Explicit Intent(ListView)"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/explicitIntentListView"
                android:textSize="14sp"
                android:onClick="onClickExplicitIntent"
                android:textAllCaps="false" />

            <Button
                android:text="@string/implicit_intent_Geo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentGeo" />

            <Button
                android:text="@string/implicit_intent_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentWeb" />

            <Button
                android:text="@string/implicit_intent_web_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentWebSearch" />

            <Button
                android:text="@string/implicit_intent_contacts_contract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentContactsContract" />

            <Button
                android:text="@string/implicit_intent_cp_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentCPSearch" />

            <Button
                android:text="@string/implicit_intent_cp_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentCPAdd" />

            <Button
                android:text="@string/implicit_intent_cp_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentCPEdit" />

            <Button
                android:text="@string/implicit_intent_cp_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentCPDelete" />

            <Button
                android:text="@string/implicit_intent_tel_dial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentTelDial" />

            <Button
                android:text="@string/implicit_intent_tel_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentTelCall" />
            <Button
                android:text="@string/implicit_intent_sendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentSendEmail" />
            <Button
                android:text="@string/implicit_intent_sendSMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentSendSMS" />
            <Button
                android:text="@string/implicit_intent_sendMSM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickImplicitIntent"
                android:id="@+id/implicitIntentSendMSM" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
